--- a/view/layout/layout.templ
+++ b/view/layout/layout.templ
@@ -11,10 +11,10 @@ templ Base() {
             // <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
             // <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
-            <title>Fortune Jar</title>
+            <title>Firday the 13th</title>
         </head>
         <body>
-            <div class="container">
+            <div>
                 { children...}
             </div>
         </body>
