--- a/view/fortunesform.templ
+++ b/view/fortunesform.templ
@@ -20,9 +20,9 @@ templ FortunesForm(kind model.FortuneKind) {
                         <textarea id="wish" name="wish" required placeholder="What do you wish for..."></textarea>
                     </div>
                 }
-                <button type="submit" class="btn">
-                    { "Save Fortune" }
-                </button>
+                <div class="button-container">
+                    <button type="submit" class="btn">Save Fortune</button>
+                </div>
             </form>
         </div>
     }
