--- a/view/fortune.templ
+++ b/view/fortune.templ
@@ -11,14 +11,14 @@ templ Fortune(fortune model.Fortune) {
             <div class="fortune-content">
                 <h1 class="fortune-title">
                     if fortune.Kind == model.KindWish {
-                        { "✨" }
+                        { "I remember..." }
                     } else {
-                        { "🪂" }
+                        { "I wish..." }
                     }
                 </h1>
                 <p class="fortune-text">{ fortune.Body }</p>
                 <div class="button-container">
-                    <a href="/" class="btn">Back to Jars</a>
+                    <a href="/" class="btn">👈</a>
                 </div>
             </div>
         </div>
